--- a/txt/licencjat.tex
+++ b/txt/licencjat.tex
@@ -88,6 +88,8 @@
 
 \usepackage{graphicx}
 \usepackage[export]{adjustbox}
+\usepackage{float}
+\usepackage{amsmath}
 % koniec definicji
 
 \begin{document}
@@ -148,34 +150,93 @@ W dalszej części pracy szczegółowo zostanie opisane stanowisko pracy.
 W tym rozdziale zaprezentowano podstawowe twierdzenia i teorię leżącą u podstaw niniejszej pracy. Skupiono się głównie na zagadnieniach związanych z wykorzystanymi algorytmami oceny podobieństwa strukturalnego, przekształceniami geometrycznymi oraz metodami dopasowania lokalnego (uliniawiania) struktur chemicznych.
 
 \section{RMSD}
+Efektywna ocena podobieństwa struktur chemicznych jest jednym z kluczowych elementów niniejszej pracy. W bioinformatyce istnieje kilka sposobów oszacowania tej wartości: obok GDT (ang. global distance test) i TM-score (ang. template modeling score) najpopularniejsza i stosunkowo prosta w zastosowaniu jest miara odchylenia średniokwadratowego - RMSD (ang. root-mean-squared deviation). 
 
-Efektywna ocena podobieństwa struktur chemicznych jest kluczowym elementem niniejszej pracy. W bioinformatyce istnieje kilka sposobów oszacowania tej wartości. Obok GDT (ang. global distance test) i TM-score (ang. template modeling score) najpopularniejsza i stosunkowo prosta w zastosowaniu jest miara odchylenia średniokwadratowego - RMSD (ang. root-mean-squared deviation). 
+Ocena podobieństwa metodą RMSD polega na obliczeniu średniokwadratowej odległości pomiędzy współrzędnymi atomów zawartych w strukturze wzorca (ang. template) i w odpowiednim fragmencie cząsteczki celu (ang. target). W tym przypadku jednostką najczęściej jest \AA (angstrom). Dwie struktury są tym bardziej do siebie podobne im bliższa zeru jest wartość RMSD.
 
-Ocena podobieństwa metodą RMSD polega na obliczeniu średniokwadratowej odległości pomiędzy współrzędnymi atomów zawartych w strukturze wzorca (ang. template) i w odpowiednim fragmencie cząsteczki celu (ang. target). 
-\\
-\\
-\includegraphics[scale=0.8, center]{rmsd}
+\boldmath{
+$$
+RMSD(p,q) = \sqrt{\frac{1}{N}\sum_{i=1}^{N}||p_i-q_i||^{2}} = 
+$$
+$$ 
+= \sqrt{\frac{1}{N}\sum_{i=1}^{N}((p_{ix}-q_{ix})^{2}+(p_{iy}-q_{iy})^{2}+(p_{iz}-q_{iz})^{2})}
+$$
+}
+gdzie:
+
+\textbf{$p$} - wektor współrzędnych struktury wzorca
+
+\textbf{$q$} - wektor współrzędnych wybranego regionu w strukturze celu
+
+\textbf{$N$} - długość wektorów współrzędnych \textbf{$p$} i \textbf{$q$}
 \\
 \\
 O ile same obliczenia są trywialne, to dobór danych wejściowych do algorytmu RMSD może stanowić poważne wyzwanie. 
 
-W tym przypadku dane pochodza z zewnętrznej aplikacji, która wykonuje procedurę dopasowania (uliniowienia) struktur wzorca i celu i odnajduje takie regiony, których miara podobieństwa nie przekracza zadanego progu (ang. threshold). Mogą to być np. alfa-helisy czy beta-wstążki, a także bliżej nieokreślone struktury drugorzędowe. Wynikiem takiej procedury uliniowienia jest plik mapujący (ang. mapping file) zawierający informację o \textit{regionach podobnych} do struktury wzorca w cząsteczce celu. 
- 
-todo: różne wartości RMSD na przykładzie dopasowania struktur ( z pymola - 2,3 sztuki) 
- 
-Należy wyznaczyć dwa wektory współrzędnych o jednakowym rozmiarze, który będzie identyczny z ilością współrzędnych struktury wzorca.
+W tym przypadku dane pochodzą z zewnętrznej aplikacji, która wykonuje procedurę dopasowania (uliniowienia) struktur wzorca i celu i odnajduje takie regiony, których miara podobieństwa nie przekracza zadanego progu (ang. threshold). Wynikiem takiej procedury są dane mapujące (ang. mapping file) zawierające informację o lokalizacji \textit{regionów podobnych} do struktury wzorca w cząsteczce celu. Takimi regionami mogą być dowolne struktury drugorzędowe (w szczególności alfa-helisy czy beta-harmonijki) lub trzeciorzędowe.
 
-Kod źródłowy funkcji realizującej obliczenie rmsd:
-def rmsd(a,b):
-	// tu będzie kod źródłowy przykładowej funkcji todo
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.25]{rmsd3}
+\caption{Przykładowe dopasowanie struktury wzorca (czerwona) do podobnego regionu struktury celu (zielona), RMSD=3.985}
+\end{figure}
+
+%
+%\begin{figure}[H]
+%\centering
+%\includegraphics[scale=0.25]{rmsd0}
+%\caption{Przykładowe dopasowanie struktury wzorca (czerwona) do %podobnego regionu struktury celu (zielona), RMSD=0}
+%\end{figure}
 
 \section{Algorytm Kabsch'a}
-RMSD jest jedną podstawowych miar podobieństwa strukturalnego wykorzystywanych w bioinformatyce. Jednym ze znanych sposobów minimalizacji jej wartości jest optymalna translacja i rotacja struktury wzorca nad strukturę celu w taki sposób aby obie struktury zostały jak najlepiej na siebie nałożone. Funkcję tę opisał w 1976 roku w swojej pracy [2] Wolfgang Kabsch .
+RMSD jest jedną podstawowych miar podobieństwa strukturalnego wykorzystywanych w bioinformatyce. Jednym ze znanych sposobów minimalizacji jego wartości jest optymalna translacja i rotacja struktury wzorca nad wybranym regionem struktury celu w taki sposób aby obie struktury zostały jak najlepiej na siebie nałożone. Sposób wyznaczania tych optymalnych transformacji opisał opisał w 1976 roku w swojej pracy [2] Wolfgang Kabsch.
 
-Powszechną metodą minimalizacji wartości RMSD jest translacja i rotacja struktury wzorca aby jak najlepiej nałożyć ją na strukturę celu. 
+Algorytm startuje z dwoma wektorami współrzędnych $p$ i $q$ o długości $N$. Wektor $p$ stanowi zbiór współrzędnych kartezjańskich struktury wzorca, $q$ - wybranego regionu struktury celu:
+$$
+p=
+\begin{pmatrix}
+ x_{p1} & y_{p1} & z_{p1} \\
+ x_{p2} & y_{p2} & z_{p2} \\
+ \vdots & \vdots & \vdots \\
+ x_{pN} & y_{pN} & z_{pN}
+\end{pmatrix}
+$$
+$$
+q= 
+\begin{pmatrix}
+ x_{q1} & y_{q1} & z_{q1} \\
+ x_{q2} & y_{q2} & z_{q2} \\
+ \vdots & \vdots & \vdots \\
+ x_{qN} & y_{qN} & z_{qN}
+\end{pmatrix}
+$$
+\\
+Algorytm Kabsch'a składa się z 3 kroków:
+\begin{enumerate}
+\item \textbf{Translacja} \\
+W pierwszym kroku należy dokonać obliczenia punktów środkowych (centroidów) obu struktur ($Cp$ i $Cq$) i dokonać przesunięcia struktury wzorca o wektor $T$ rozpięty pomiędzy tymi punktami tak, aby centroidy nałożyły się na siebie. Jako punkt środkowy można wybrać środek masy lub środek geometryczny, np: 
+$$Cp = (Cp_x, Cp_y, Cp_z)$$
+gdzie:
+$$Cp_x = \frac{1}{N}\sum_{i=1}^{N}{x_{pi}}$$
+$$Cp_y = \frac{1}{N}\sum_{i=1}^{N}{y_{pi}}$$
+$$Cp_z = \frac{1}{N}\sum_{i=1}^{N}{z_{pi}}$$
+oraz
+$$Cq = (Cq_x, Cq_y, Cq_z)$$
+gdzie:
+$$Cq_x = \frac{1}{N}\sum_{i=1}^{N}{x_{qi}}$$
+$$Cq_y = \frac{1}{N}\sum_{i=1}^{N}{y_{qi}}$$
+$$Cq_z = \frac{1}{N}\sum_{i=1}^{N}{z_{qi}}$$
+zatem wektor translacji:
+$$ T = |Cp-Cq| = $$
+$$=(|Cp_x-Cq_x|,|Cp_y-Cq_y|,|Cp_z-Cq_z|)$$
+\item \textbf{Macierz kowariancji} \\
+Macierz kowariancji jest niezbędna do oceny tego jak bardzo obie struktury się od siebie różnią.
+\item \textbf{Optymalna macierz rotacji}
 
-def kabsch(a,b,c):
-	// tu będzie kod xrodlowy algorytmu kabscha
+
+\end{enumerate}
+
+
 
 \section{Pole siłowe}
 todo
@@ -348,7 +409,7 @@ Klasyczne algorytmy dla blabalizatora różnicowego wykorzystują:
       prace Gryzybór-Głombaskiego i innych teoretyków nurtu
       teoretyczno-praktycznego badań w~Instytucie Podstawowych
       Problemów Blabalii w~Fifie.},
-  \item logos --- termos%\footnote{Szpotański}
+  \item logos --- termos\footnote{Szpotański}
   \end{itemize}
   z właściwym im przedziwym dynamizmem.
 \end{enumerate}
